objects/wkitsm__RequestMenuAnswer__c.object
<CustomObject>
    <fields>
        <fullName>wkitsm__AnswerText__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>wkitsm__Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>RequestMenuResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__QuestionChoiceText__c</fullName>
        <label>Question Choice Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__QuestionText__c</fullName>
        <label>Question Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__RequestMenuQuestionChoice__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Menu Item Question Choice</label>
        <referenceTo>wkitsm__RequestMenuQuestionChoice__c</referenceTo>
        <relationshipName>RequestMenuAnswers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__RequestMenuQuestion__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Request Menu Item Question</label>
        <referenceTo>wkitsm__RequestMenuQuestion__c</referenceTo>
        <relationshipName>RequestMenuAnswers</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__RequestMenuSubmission__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Request Menu Submission</label>
        <referenceTo>wkitsm__RequestMenuSubmission__c</referenceTo>
        <relationshipLabel>Request Menu Submissions</relationshipLabel>
        <relationshipName>RequestMenuSubmission</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Request Menu Answer</label>
    <nameField>
        <displayFormat>RMA-{0000}</displayFormat>
        <label>Answer Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Request Menu Answers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>